update contact page

--- a/03-Personal-Portfolio/contact.html
+++ b/03-Personal-Portfolio/contact.html
@@ -7,12 +7,17 @@
     <meta name="description" content="A simple HTML-only website for roadmap.sh frontend" />
     <meta name="keywords" content="Frontend Project, HTML, Roadmap.sh" />
     <meta name="author" content="Nguyen Hoang Duong" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div>
-            <img src="./assets/nhd.jpg" alt="Nguyen Hoang Duong" />
+        <div class="logo">
+            <img src="./assets/image/nhd.jpg" alt="Nguyen Hoang Duong" />
             Nguyen Hoang Duong
         </div>
         <nav>
@@ -24,19 +29,19 @@
     </header>
     <main>
         <section class="contact">
-        <h1>Contact Me</h1>
-        <form action="" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+            <h1>Contact Me</h1>
+            <form action="" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
 
-            <button type="submit">Send Message</button>
-        </form>
+                <button type="submit">Send Message</button>
+            </form>
       </section>
     </main>
     <footer>
